Do make project build with Java 8 and some minor changes